made the site dark mode and changed logo. fixed client side verification for create account page

--- a/public/css/create.css
+++ b/public/css/create.css
@@ -27,7 +27,7 @@ button{
     padding: 0.5rem 0.75rem;
     border-radius: 1rem;
     text-decoration: none;
-    color: #545454;
+    color: black;
     font-size: 1rem;
     font-weight: bold;
     width: 50%;
