--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,7 +17,7 @@ li{
 }
 
 #column-left, #column-right{
-    background-color: #c1c1c1;
+    background-color: #1a1a1a;
     flex: 1;
     padding: 2rem;
 }
@@ -39,6 +39,8 @@ li{
     flex-direction: column;
     align-items: center;
     padding: 2rem;
+    border-left: 1px solid rgb(116, 116, 116);
+    border-right: 1px solid rgb(116, 116, 116);
 }
 
 .bottom-right{
